refactor: load google client id from .env

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <meta name="google-signin-client_id" content="%GOOGLE_CLIENT_ID%">
+  <meta name="google-signin-client_id" content="%REACT_APP_GOOGLE_CLIENT_ID%">
   <title>SMSWithoutBorders User</title>
 </head>
 
