update: set page name on title bar

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <meta name="google-signin-client_id" content="%REACT_APP_GOOGLE_CLIENT_ID%">
-  <title>SMSWithoutBorders User</title>
+  <title>SMSWithoutBorders</title>
 </head>
 
 <body>
