--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="SMSwithoutBorders" />
   <link rel="apple-touch-icon" href="/logo192.png" />
   <link rel="manifest" href="/manifest.json" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <title>smswithoutborders.com</title>
 </head>
 
